--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
