--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "postcss-nesting": "^12.0.2",
     "react": "^18",
     "react-dom": "^18"
   },
