--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -15,7 +15,9 @@
     "next": "14.1.0",
     "postcss-nesting": "^12.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
