--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.7",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.0.3",
+    "mv": "^2.1.1",
     "next": "14.1.0",
     "postcss-nesting": "^12.0.2",
     "react": "^18",
@@ -28,6 +30,7 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-list-style": "^0.1.2",
     "typescript": "^5"
   }
 }
