--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-responsive": "^9.0.2",
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
