--- a/my-backend/config/config.json
+++ b/my-backend/config/config.json
@@ -2,21 +2,21 @@
     "development": {
         "username": "root",
         "password": null,
-        "database": "lustrumdtsl2",
+        "database": "lustrumdtsl",
         "host": "127.0.0.1",
         "dialect": "mysql"
     },
     "test": {
         "username": "root",
         "password": null,
-        "database": "lustrumdtsl2",
+        "database": "lustrumdtsl",
         "host": "127.0.0.1",
         "dialect": "mysql"
     },
     "production": {
         "username": "root",
         "password": null,
-        "database": "lustrumdtsl2",
+        "database": "lustrumdtsl",
         "host": "127.0.0.1",
         "dialect": "mysql"
     }
