--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@types/multer": "^1.4.11",
     "axios": "^1.6.7",
+    "express": "^4.18.2",
     "formidable": "^3.5.1",
+    "formidable-serverless": "^1.1.1",
     "framer-motion": "^11.0.3",
+    "multer": "^1.4.5-lts.1",
     "mv": "^2.1.1",
     "next": "14.1.0",
+    "next-connect": "^1.0.0",
+    "path": "^0.12.7",
     "postcss-nesting": "^12.0.2",
     "react": "^18",
     "react-dom": "^18",
