--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.3",
     "mv": "^2.1.1",
@@ -20,7 +24,9 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-responsive": "^9.0.2",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
