--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/multer": "^1.4.11",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -21,6 +22,7 @@
     "formidable": "^3.5.1",
     "formidable-serverless": "^1.1.1",
     "framer-motion": "^11.0.3",
+    "js-cookie": "^3.0.5",
     "multer": "^1.4.5-lts.1",
     "mv": "^2.1.1",
     "next": "14.1.0",
