Menambahkan aturan untuk mengabaikan file config.json dan database.js

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 lustrumdtsl/my-frontend/public/uploadsmy-frontend/public/uploads/
+lustrumdtsl/my-backend/config/config.json
+lustrumdtsl/my-backend/config/database.js
