--- a/my-frontend/.env
+++ b/my-frontend/.env
@@ -1,3 +1,3 @@
-# NEXT_PUBLIC_BASE_URL=https://lustrumkmtsl.com/api
-NEXT_PUBLIC_BASE_URL=http://localhost:5001
+NEXT_PUBLIC_BASE_URL=http://lustrumkmtsl.com:5001
+# NEXT_PUBLIC_BASE_URL=http://localhost:5001
 ```
