--- a/my-frontend/.env
+++ b/my-frontend/.env
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_BASE_URL=https://lustrumkmtsl.com:5001
-# NEXT_PUBLIC_BASE_URL=http://127.0.0.1:5001
+NEXT_PUBLIC_BASE_URL=https://lustrumkmtsl.com/api 
