--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -37,6 +37,7 @@
         "react-hot-toast": "^2.4.1",
         "react-responsive": "^9.0.2",
         "react-toastify": "^10.0.4",
+        "sharo": "^0.0.7",
         "sharp": "^0.33.2",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7"
