--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -22,7 +22,8 @@
         "express": "^4.18.2",
         "formidable": "^3.5.1",
         "formidable-serverless": "^1.1.1",
-        "framer-motion": "^11.0.3",
+        "framer-motion": "^11.3.2",
+        "gsap": "^3.12.5",
         "js-cookie": "^3.0.5",
         "json2csv": "^6.0.0-alpha.2",
         "jszip": "^3.10.1",
@@ -32,8 +33,8 @@
         "next-connect": "^1.0.0",
         "path": "^0.12.7",
         "postcss-nesting": "^12.0.2",
-        "react": "^18",
-        "react-dom": "^18",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
         "react-responsive": "^9.0.2",
         "react-toastify": "^10.0.4",
