--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@fontsource/poppins": "^5.0.8",
+        "react-fast-marquee": "^1.2.0",
         "@nextui-org/react": "^2.2.9",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
